# qmt-trading-skill

./: .env.example  .gitignore  CLAUDE.md  README.md  ecosystem.config.cjs  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
dashboard/: _sidebar.py  app.py
dashboard/pages/: 1_行情数据.py  2_板块管理.py  3_交易日历.py  4_合约信息.py  5_数据下载.py  6_交易管理.py  7_系统状态.py
docs/: agent-skills.md  configuration.md  development.md  getting-started.md  index.md  rest-api.md  websocket.md
docs/api/: index.md
docs/css/: extra.css
docs/examples/: daily-eval-report.md
scripts/: daily_eval_scheduler.bat  daily_eval_scheduler.py  diagnose_bson.py  pm2-start.bat  pm2-stop.bat  pm2_qmt_scheduler.py  pm2_qmt_server.py
skills/: README.md  ROADMAP.md
skills/_shared/: README.md  common.py  credit_positions_util.py  execution_review_eval.py  execution_review_feishu_md.py  feishu_doc.py  financial_util.py  market_turnover_util.py  orders_util.py  pnl_util.py  positions_util.py  return_strategy_summary.py  stock_names.py  trading_fmt.py  trading_philosophy.py
skills/qmt-bridge-convertible/: SKILL.md
skills/qmt-bridge-credit-margin/: SKILL.md
skills/qmt-bridge-daily-pnl/: SKILL.md
skills/qmt-bridge-etf/: SKILL.md
skills/qmt-bridge-event-calendar/: SKILL.md
skills/qmt-bridge-execution-review/: SKILL.md
skills/qmt-bridge-feishu-doc/: SKILL.md
skills/qmt-bridge-financial-download/: SKILL.md
skills/qmt-bridge-fundamental-screen/: SKILL.md
skills/qmt-bridge-hk-connect/: SKILL.md
skills/qmt-bridge-kline-backfill/: SKILL.md
skills/qmt-bridge-market-watch/: SKILL.md
skills/qmt-bridge-option/: SKILL.md
skills/qmt-bridge-order-ops/: SKILL.md
skills/qmt-bridge-portfolio-risk/: SKILL.md
skills/qmt-bridge-realtime-monitor/: SKILL.md
skills/qmt-bridge-rebalance/: SKILL.md
skills/qmt-bridge-return-analysis/: SKILL.md
skills/qmt-bridge-sector-theme/: SKILL.md
skills/qmt-bridge-smart-execution/: SKILL.md
skills/qmt-bridge-technical-signal/: SKILL.md
skills/qmt-bridge-trading/: SKILL.md
src/qmt_bridge/: credit_positions.py
tests/: README.md  conftest.py  openapi_harness.py  openapi_samples.py  test_account_type.py  test_credit_pnl.py  test_credit_positions_util.py  test_execution_review_eval.py  test_feishu_doc.py  test_market_turnover_util.py  test_orders_util_summary.py  test_skills_smoke.py  test_trading_philosophy.py
tests/live/: __init__.py  conftest.py  test_openapi_live.py  (+2 more)
(+66 files in other folders)
